k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          # for server image, we need to tell it how to connect to postgres & redis, it's expecting env vars to do this
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
